[package]
name = "shipped"
version = "0.1.0"
edition = "2021"
default-run = "view"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
async-trait = "0.1.56"
snafu = "0.7.1"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "view"
path = "src/view.rs"