[package]
name = "shipped"
version = "0.1.0"
edition = "2021"
default-run = "gui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
async-trait = "0.1.56"
snafu = "0.7.1"
cfg_log = "0.1.0"
log = { version = "0.4.17", optional = true }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
rand = "0.8.5"
rand_chacha = "0.3.1"
line_drawing = "1.0.0"
init_array = "0.3.0"
futures = "0.3"
wasmer = "4.2.0"

[[bin]]
name = "gui"
path = "src/gui.rs"

[profile.release]
strip = true
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true


[workspace]
members = [
    "bots/tools",
    "bots/up",
    "bots/zigzag",
    "bots/walker",
    "bots/coord",
    "bots/bounce",
    "bots/eater",
    "bots/driller",
    "bots/mover",
    "bots/explorer",
    "bots/warrior1",
]
